--- a/recipe.ipynb
+++ b/recipe.ipynb
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f0bbb520-8034-4a7c-813e-c3d5c932a139",
    "metadata": {},
    "outputs": [
@@ -1046,7 +1046,7 @@
        "      <td>5</td>\n",
        "      <td>6881118</td>\n",
        "      <td>[통 삼겹 1kg, 청경채 3개, 대파 1대, 양파 1개, 통마늘 8개, 생강 1/...</td>\n",
-       "      <td>['홈 파티 요리  고급스러운 통삼겹 요리 동파육 만들기 ♬♪\\n※ 동파육 잡내 제...</td>\n",
+       "      <td>[홈 파티 요리  고급스러운 통삼겹 요리 동파육 만들기 ♬♪\\n※ 동파육 잡내 제거...</td>\n",
        "      <td>3 servings</td>\n",
        "      <td>5</td>\n",
        "      <td>PT30H-1710M</td>\n",
@@ -1060,7 +1060,7 @@
        "      <td>0</td>\n",
        "      <td>6906965</td>\n",
        "      <td>[당근 1/2개, 양파 1개, 표고버섯 4개, 목이버섯 1컵, 어묵 2장, 호박고지...</td>\n",
-       "      <td>['일단 잡채에 들어가는 모든 재료들은 무조건 채를 썰어서 준비합니다', ' 건표고...</td>\n",
+       "      <td>[일단 잡채에 들어가는 모든 재료들은 무조건 채를 썰어서 준비합니다,  건표고버섯채...</td>\n",
        "      <td>6 servings</td>\n",
        "      <td>0</td>\n",
        "      <td>PT30M</td>\n",
@@ -1074,7 +1074,7 @@
        "      <td>5</td>\n",
        "      <td>6908917</td>\n",
        "      <td>[닭볶음용 닭 1마리, 양파 1/2개, 당근 1/3개, 감자 1개, 대파 1줌, 고...</td>\n",
-       "      <td>['요즘 마트에가면 닭볶음용 온가족세트 닭이 있더라구요~ 할인도 자주해서 종종 사오...</td>\n",
+       "      <td>[요즘 마트에가면 닭볶음용 온가족세트 닭이 있더라구요~ 할인도 자주해서 종종 사오는...</td>\n",
        "      <td>3 servings</td>\n",
        "      <td>7</td>\n",
        "      <td>PT30M</td>\n",
@@ -1088,7 +1088,7 @@
        "      <td>5</td>\n",
        "      <td>6919155</td>\n",
        "      <td>[배추 2포기, 양파 1/2개, 사과 1/2개, 배 중간크기1개, 당근 1/2개, ...</td>\n",
-       "      <td>['배추 2포기를 4등분으로 잘라주신후 큰볼에 물을 담아 소금 1컵을 풀어서 자른배...</td>\n",
+       "      <td>[배추 2포기를 4등분으로 잘라주신후 큰볼에 물을 담아 소금 1컵을 풀어서 자른배추...</td>\n",
        "      <td>6 servings</td>\n",
        "      <td>3</td>\n",
        "      <td>PT2H</td>\n",
@@ -1102,7 +1102,7 @@
        "      <td>0</td>\n",
        "      <td>6915060</td>\n",
        "      <td>[메밀가루 3T, 계란 1개, 우유 3T, 3층 치즈 2장, 아몬드슬라이스 조금, ...</td>\n",
-       "      <td>['껍질벗긴 메밀3T를 분쇄기로 갈아요', ' (시판 메밀가루 3T 쓰셔도 되구요'...</td>\n",
+       "      <td>[껍질벗긴 메밀3T를 분쇄기로 갈아요,  (시판 메밀가루 3T 쓰셔도 되구요, )\\...</td>\n",
        "      <td>1 servings</td>\n",
        "      <td>0</td>\n",
        "      <td>PT15M</td>\n",
@@ -1128,11 +1128,11 @@
        "4            0   6915060  [메밀가루 3T, 계란 1개, 우유 3T, 3층 치즈 2장, 아몬드슬라이스 조금, ...   \n",
        "\n",
        "                                  recipeInstructions recipeYield  reviewCount  \\\n",
-       "0  ['홈 파티 요리  고급스러운 통삼겹 요리 동파육 만들기 ♬♪\\n※ 동파육 잡내 제...  3 servings            5   \n",
-       "1  ['일단 잡채에 들어가는 모든 재료들은 무조건 채를 썰어서 준비합니다', ' 건표고...  6 servings            0   \n",
-       "2  ['요즘 마트에가면 닭볶음용 온가족세트 닭이 있더라구요~ 할인도 자주해서 종종 사오...  3 servings            7   \n",
-       "3  ['배추 2포기를 4등분으로 잘라주신후 큰볼에 물을 담아 소금 1컵을 풀어서 자른배...  6 servings            3   \n",
-       "4  ['껍질벗긴 메밀3T를 분쇄기로 갈아요', ' (시판 메밀가루 3T 쓰셔도 되구요'...  1 servings            0   \n",
+       "0  [홈 파티 요리  고급스러운 통삼겹 요리 동파육 만들기 ♬♪\\n※ 동파육 잡내 제거...  3 servings            5   \n",
+       "1  [일단 잡채에 들어가는 모든 재료들은 무조건 채를 썰어서 준비합니다,  건표고버섯채...  6 servings            0   \n",
+       "2  [요즘 마트에가면 닭볶음용 온가족세트 닭이 있더라구요~ 할인도 자주해서 종종 사오는...  3 servings            7   \n",
+       "3  [배추 2포기를 4등분으로 잘라주신후 큰볼에 물을 담아 소금 1컵을 풀어서 자른배추...  6 servings            3   \n",
+       "4  [껍질벗긴 메밀3T를 분쇄기로 갈아요,  (시판 메밀가루 3T 쓰셔도 되구요, )\\...  1 servings            0   \n",
        "\n",
        "     totalTime                                                  x  \n",
        "0  PT30H-1710M  ['통 삼겹', '청경채', '대파', '양파', '통마늘', '생강', '통후추'...  \n",
@@ -1142,7 +1142,7 @@
        "4        PT15M  ['메밀가루', '계란', '우유', '3층 치즈 2장', '아몬드 슬라이스', '...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,12 +1153,14 @@
     "\n",
     "data = pd.read_csv(\"recipe3.csv\")\n",
     "data[\"recipeIngredient\"] = data[\"recipeIngredient\"].apply(literal_eval)\n",
+    "data[\"recipeInstructions\"] = data[\"recipeInstructions\"].apply(literal_eval)\n",
+    "data = data.drop_duplicates(\"name\").reset_index(drop=True)\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5e2d089b-fa1e-41dc-8828-ceda68dcbaf3",
    "metadata": {},
    "outputs": [],
@@ -1183,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "519b7685-48bd-41b3-94a1-deb1392b608d",
    "metadata": {},
    "outputs": [],
@@ -1205,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1fb2f1e1-df6e-4764-8cdd-b0c320d0a8fb",
    "metadata": {},
    "outputs": [],
@@ -1236,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "539cbdec-94e5-4711-bdad-01a0acf3332e",
    "metadata": {},
    "outputs": [
@@ -1271,7 +1273,7 @@
        "      <th>15</th>\n",
        "      <td>아기어묵 만들기 (no 밀가루, no 전분가루)</td>\n",
        "      <td>[새우 6마리, 오징어 2마리, 명태포 6장, 연근 5cm, 달걀 1개, 양파 1/...</td>\n",
-       "      <td>['재료를 준비해요', ' 새우(6마리), 오징어(작은사이즈 2마리), 명태포(6장...</td>\n",
+       "      <td>[재료를 준비해요,  새우(6마리), 오징어(작은사이즈 2마리), 명태포(6장), ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1285,10 +1287,10 @@
        "15  [새우 6마리, 오징어 2마리, 명태포 6장, 연근 5cm, 달걀 1개, 양파 1/...   \n",
        "\n",
        "                                   recipeInstructions  \n",
-       "15  ['재료를 준비해요', ' 새우(6마리), 오징어(작은사이즈 2마리), 명태포(6장...  "
+       "15  [재료를 준비해요,  새우(6마리), 오징어(작은사이즈 2마리), 명태포(6장), ...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "66bed91a-3c68-4a58-bb39-91af4bf75d44",
    "metadata": {},
    "outputs": [
@@ -1342,22 +1344,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7219</th>\n",
+       "      <th>6090</th>\n",
        "      <td>연어 간장조림</td>\n",
        "      <td>[연어 200g, 정종, 소금, 후추, 간장 1.5T, 올리고당 1T, 물 100m...</td>\n",
-       "      <td>['연어를 먹기좋은 사이즈로 등분합니다', '\\n연어에 소금, 후추, 정종 1/2스...</td>\n",
+       "      <td>[연어를 먹기좋은 사이즈로 등분합니다, \\n연어에 소금, 후추, 정종 1/2스푼으로...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3881</th>\n",
+       "      <th>3333</th>\n",
        "      <td>미역국 맛있게 끓이는 법! 쌀뜨물 미역국</td>\n",
        "      <td>[소고기양지 150g, 미역 50g, 쌀뜨물 3.5L, 국간장 5큰술, 참기름 2큰...</td>\n",
-       "      <td>['미역은 한 시간 불렸어요', ' 그리고 물에 깨끗하게 헹구어 주고요', ' 소고...</td>\n",
+       "      <td>[미역은 한 시간 불렸어요,  그리고 물에 깨끗하게 헹구어 주고요,  소고기는 핏물...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3878</th>\n",
-       "      <td>미역국 맛있게 끓이는 법! 쌀뜨물 미역국</td>\n",
-       "      <td>[소고기양지 150g, 미역 50g, 쌀뜨물 3.5L, 국간장 5큰술, 참기름 2큰...</td>\n",
-       "      <td>['미역은 한 시간 불렸어요', ' 그리고 물에 깨끗하게 헹구어 주고요', ' 소고...</td>\n",
+       "      <th>5561</th>\n",
+       "      <td>연어 카르파쵸 만들기</td>\n",
+       "      <td>[연어 200g, 베이비채소 100g, 다진 양파 3T, 레몬 1개, 올리브오일 3...</td>\n",
+       "      <td>[연어는 적당한 두께로 썰어줍니다, \\n올리브 오일에 설탕, 식초, 소금 약간, 다...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1365,22 +1367,22 @@
       ],
       "text/plain": [
        "                        name  \\\n",
-       "7219                 연어 간장조림   \n",
-       "3881  미역국 맛있게 끓이는 법! 쌀뜨물 미역국   \n",
-       "3878  미역국 맛있게 끓이는 법! 쌀뜨물 미역국   \n",
+       "6090                 연어 간장조림   \n",
+       "3333  미역국 맛있게 끓이는 법! 쌀뜨물 미역국   \n",
+       "5561             연어 카르파쵸 만들기   \n",
        "\n",
        "                                       recipeIngredient  \\\n",
-       "7219  [연어 200g, 정종, 소금, 후추, 간장 1.5T, 올리고당 1T, 물 100m...   \n",
-       "3881  [소고기양지 150g, 미역 50g, 쌀뜨물 3.5L, 국간장 5큰술, 참기름 2큰...   \n",
-       "3878  [소고기양지 150g, 미역 50g, 쌀뜨물 3.5L, 국간장 5큰술, 참기름 2큰...   \n",
+       "6090  [연어 200g, 정종, 소금, 후추, 간장 1.5T, 올리고당 1T, 물 100m...   \n",
+       "3333  [소고기양지 150g, 미역 50g, 쌀뜨물 3.5L, 국간장 5큰술, 참기름 2큰...   \n",
+       "5561  [연어 200g, 베이비채소 100g, 다진 양파 3T, 레몬 1개, 올리브오일 3...   \n",
        "\n",
        "                                     recipeInstructions  \n",
-       "7219  ['연어를 먹기좋은 사이즈로 등분합니다', '\\n연어에 소금, 후추, 정종 1/2스...  \n",
-       "3881  ['미역은 한 시간 불렸어요', ' 그리고 물에 깨끗하게 헹구어 주고요', ' 소고...  \n",
-       "3878  ['미역은 한 시간 불렸어요', ' 그리고 물에 깨끗하게 헹구어 주고요', ' 소고...  "
+       "6090  [연어를 먹기좋은 사이즈로 등분합니다, \\n연어에 소금, 후추, 정종 1/2스푼으로...  \n",
+       "3333  [미역은 한 시간 불렸어요,  그리고 물에 깨끗하게 헹구어 주고요,  소고기는 핏물...  \n",
+       "5561  [연어는 적당한 두께로 썰어줍니다, \\n올리브 오일에 설탕, 식초, 소금 약간, 다...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1396,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "deeb3cb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.columns = RECIPE_KEYS\n",
+    "[recipe]+results.to_dict(\"records\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6560c42b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[{'foodName': '연어 미역국',\n",
+    "  'ingredients': ['물 6컵', '미역 1줌', '연어 1팩(200g)', '다진 파 1/2컵', '다진 마늘 1큰술', '소금, 후추 약간'],\n",
+    "  'recipe': ['1. 미역은 찬물에 30분간 불린 후 물기를 꼭 짜서 준비합니다.', '2. 연어는 한입 크기로 썰어 준비합니다.', '3. 냄비에 물을 넣고 끓입니다.', '4. 끓는 물에 미역을 넣고 2분간 끓입니다.', '5. 연어와 파, 마늘을 넣고 5분간 끓입니다.', '6. 소금, 후추로 간을 맞춘 후 불을 끕니다.']},\n",
+    " {'foodName': '연어 간장조림',\n",
+    "  'ingredients': ['연어 200g', '정종', '소금', '후추', '간장 1.5T', '올리고당 1T', '물 100ml', '참기름', '마늘', '양파 1/2개', '쪽파'],\n",
+    "  'recipe': ['연어를 먹기좋은 사이즈로 등분합니다', '연어에 소금, 후추, 정종 1/2스푼으로 밑간을 합니다', '양념장을 만들어요', ' 간장 1', '5스푼, 올리고당 1스푼, 물 반컵, 참기름, 다진마늘, 다진양파를 섞어요', '카놀라유를 두른 팬에 마늘을 편썰어 향을내 볶아줍니다', '밑간이 된 연어를 중불에서 구워줍니다', '한면이 익었을때 뒤집어 양념장의 반을 넣고 채썬 양파1/4 도 함께 넣어요', ' 양념장이 끓고 1분후 뒤집어서 나머지 양념장을 넣어요', '그릇에 담고 얇게 채썬 양파와 쪽파로 고명을 올리면 완성입니다~']},\n",
+    " {'foodName': '미역국 맛있게 끓이는 법! 쌀뜨물 미역국',\n",
+    "  'ingredients': ['소고기양지 150g', '미역 50g', '쌀뜨물 3.5L', '국간장 5큰술', '참기름 2큰술', '마늘 2큰술'],\n",
+    "  'recipe': ['미역은 한 시간 불렸어요', ' 그리고 물에 깨끗하게 헹구어 주고요', ' 소고기는 핏물을 제거하고 진간장 5큰술, 마늘 2큰술 준비하고요', ' 쌀뜨물도 준비했어요', '깨끗하게 씻어 둔 미역에 진간장으로 먼저 간을 하고요', ' 손으로 바락바락 문질러서  끈끈하게 만들어줍니다', '참기름도 1큰술  마늘 2큰술 넣고 바락바락 주물러줬어요', ' 끈끈한 액체가 나오면 되고요', ' 참기름대신 들기름을 넣으면  더 뽀얀 국물을 기대할 수 있답니다', '먼저 소고기를 볶아주고요', '미역을 넣은 후  더 볶아주는데요', ' 국물이 없으면  쌀뜨물 2컵 정도 먼저 부어주고요', '뽀얀 국물이 나올 때까지 볶아줬어요', '남은 쌀뜨물 넣고 첨엔 센 불 끓으면 중약 불로해서 끓여주고요', ' 20분 중간불에서 끓이고요', '20분 약불에서 은근히 끓였어요', ' 보글보글  노랗고 뽀얀 국물이 나올 때까지국물 맛 진한 미역국 만들기', ' 쌀뜨물을 넣으면 좀 더 구수한  미역국이 만들어진답니다', '포록포록~ 부드런 미역국이 완성 되었다지요', '']},\n",
+    " {'foodName': '연어 카르파쵸 만들기',\n",
+    "  'ingredients': ['연어 200g', '베이비채소 100g', '다진 양파 3T', '레몬 1개', '올리브오일 3T', '설탕 3T', '식초 3T', '소금 1꼬집'],\n",
+    "  'recipe': ['연어는 적당한 두께로 썰어줍니다', '올리브 오일에 설탕, 식초, 소금 약간, 다진 양파, 레몬피채를 넣고 섞어줍니다', ' 올리브 오일에 설탕, 식초은 동량으로 넣어주고 레몬과 양파는 기호에 맞게 넣어줍니다', '연어 위에 베이비 채소를 올리고 만든 소스를 뿌려 완성합니다', '']}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b37751c",
    "metadata": {},
    "outputs": [],
    "source": []
